app/ui/findOutMore.module.css
@font-face {
  font-family: Trap;
  src: url(fonts/Trap-Regular.otf);
}

.main {
  background: #c4f361;
  padding: 1rem max(0.3rem, 8%);
  position: relative;
  overflow: hidden;
}

.top {
  margin-top: 0.3rem;
}

.topItem {
  margin: 0.15rem 0;
  line-height: 0; /* prevent excessive space beetwen lines in div containing image, text, link */
}

.topItem a {
  color: inherit;
  text-decoration: none;
}

.img {
  margin-right: 0.2rem;
  vertical-align: top;
  user-select: none;
}

.text {
  vertical-align: top;
  font: 0.2rem Trap;
}

.bottom {
  margin-top: 0.5rem;
}

.img_1 {
  width: calc(40vw + 2rem);
  height: calc(0.6 * (40vw + 2rem));
  position: absolute;
  bottom: -0.1rem;
  right: -0.5rem;
  user-select: none;
}

